# Android-cmake

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/wmy/jni/com/colorrecognize/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidAPI.cpp  CMakeLists.txt  OpenNINative.h  native-lib.cpp
app/src/main/cpp/include/: XnCppWrapper.h  XnVersion.h
app/src/main/cpp/include/Linux-x86/: XnOSLinux-x86.h
app/src/main/cpp/include/MacOSX/: XnPlatformMacOSX.h
app/src/main/cpp/include/Win32/: XnOSWin32.h
app/src/main/java/wmy/jni/com/colorrecognize/: MainActivity.java  OpenCVAlgorithm.java  OpenCVAlgorithmRecognizeColor.java  OpenCVAlgorithmRecognizeShape.java  OpenCVBase.java
app/src/main/java/wmy/jni/com/colorrecognize/core/: DataEngine.java  NativeMethod.java
app/src/main/java/wmy/jni/com/colorrecognize/core/camera/: CameraPreview.java  UVCCamera.java
app/src/main/java/wmy/jni/com/colorrecognize/core/permission/: OrbbecNIHelper.java  PermissionCallbacks.java  PermissionGrant.java
app/src/main/java/wmy/jni/com/colorrecognize/core/utils/: GlobalDef.java
app/src/main/java/wmy/jni/com/colorrecognize/core/view/: DataViewer.java  DepthViewer.java  RGBViewer.java
app/src/main/jni/: Android.mk  Application.mk
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/wmy/jni/com/colorrecognize/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary320/: build.gradle
openCVLibrary320/src/main/java/org/opencv/android/: CameraRenderer.java
